--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
   <head>
     <link
       rel="stylesheet"
-      href="/css/dark.css"
+      href="css/dark.css"
       media="(prefers-color-scheme: dark)"
     />
     <link
       rel="stylesheet"
-      href="/css/light.css"
+      href="css/light.css"
       media="(prefers-color-scheme: no-preference), (prefers-color-scheme: light)"
     />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+    <title>Document</title></head
+  >light
   <body>
     <div>
-      <h1>
-        Prefered color scheme:
-      </h1>
+      <h1>Prefered color scheme:</h1>
     </div>
   </body>
 </html>
