--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <link rel="stylesheet" href="css/main.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title></head
-  >light
+    <title>Prefers Color Scheme</title>
+  </head>
   <body>
     <div>
-      <h1>Prefered color scheme:</h1>
+      <h1>Prefers Color Scheme:</h1>
     </div>
   </body>
 </html>
